--- a/site/index.html
+++ b/site/index.html
@@ -30,6 +30,7 @@
         <nav class="nav">
           <a href="#timeline" class="nav-link active">Timeline</a>
           <a href="#blog" class="nav-link">Blog</a>
+          <a href="#company" class="nav-link">Company Profile</a>
         </nav>
 
         <div class="filters">
@@ -80,6 +81,16 @@
             </div>
           </div>
           <div id="blogGrid" class="cards"></div>
+        </section>
+
+        <section id="company" class="panel" hidden>
+          <div class="panel-header">
+            <h2>Company Profile</h2>
+            <div class="panel-actions">
+              <input id="companySearch" class="search" type="search" placeholder="Search practice areas..." />
+            </div>
+          </div>
+          <div id="companyContent"></div>
         </section>
       </section>
     </main>
