--- a/site/index.html
+++ b/site/index.html
@@ -20,6 +20,7 @@
           </div>
         </div>
         <div class="actions">
+          <button id="mobileMenuBtn" class="btn btn-secondary mobile-only">☰</button>
           <button id="printPageBtn" class="btn btn-primary">Download Page as PDF</button>
         </div>
       </div>
@@ -94,6 +95,22 @@
         </section>
       </section>
     </main>
+
+    <!-- Modal for detailed item view -->
+    <div id="itemModal" class="modal" style="display: none;">
+      <div class="modal-overlay" onclick="closeModal()"></div>
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 id="modalTitle"></h2>
+          <button class="modal-close" onclick="closeModal()">&times;</button>
+        </div>
+        <div class="modal-body" id="modalBody"></div>
+        <div class="modal-footer">
+          <button class="btn btn-primary" onclick="printModalContent()">Download as PDF</button>
+          <button class="btn btn-secondary" onclick="closeModal()">Close</button>
+        </div>
+      </div>
+    </div>
 
     <footer class="site-footer">
       <div class="container">
