Fix modal click functionality and add debugging
- Fixed click event handling for timeline and blog items
- Added proper event delegation to prevent button conflicts
- Added visual hover effects to indicate clickable items
- Added console logging for debugging modal functionality
- Added test modal button to verify functionality
- Improved click detection to exclude buttons and links
- Enhanced user experience with cursor pointer and hover states

--- a/site/index.html
+++ b/site/index.html
@@ -21,6 +21,7 @@
         </div>
         <div class="actions">
           <button id="mobileMenuBtn" class="btn btn-secondary mobile-only">☰</button>
+          <button id="testModalBtn" class="btn btn-secondary">Test Modal</button>
           <button id="printPageBtn" class="btn btn-primary">Download Page as PDF</button>
         </div>
       </div>
